--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.21", features = ["derive", "cargo"] }
 color-eyre = { version = "0.6.3", features = ["issue-url", "url"] }
+ctor = "0.2.9"
 serde = { version = "1.0.215", features = ["derive"] }
 thiserror = "2.0.3"
 tracing = { version = "0.1.41", features = ["log"] }
