--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ clap = { version = "4.5.21", features = ["derive", "cargo"] }
 color-eyre = { version = "0.6.3", features = ["issue-url", "url"] }
 ctor = "0.2.9"
 serde = { version = "1.0.215", features = ["derive"] }
+strum = { version = "0.26.3", features = ["derive"] }
 thiserror = "2.0.3"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-error = "0.2.1"
