--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ default-run = "advent_2024"
 clap = { version = "4.5.21", features = ["derive", "cargo"] }
 color-eyre = { version = "0.6.3", features = ["issue-url", "url"] }
 ctor = "0.2.9"
+itertools = "0.13.0"
 rayon = "1.10.0"
 serde = { version = "1.0.215", features = ["derive"] }
 strum = { version = "0.26.3", features = ["derive"] }
